@@ -337,8 +337,18 @@ class TorqueJobRunner(object):
 
         echo "Working directory: $$(pwd)" >> $LOG_DIR/$${PBS_JOBNAME}-run.log
 
-        # optional version command
-        $VERSION_CMDS > $LOG_DIR/$${PBS_JOBNAME}-version.log 2>&1
+        # optional version command, $VERSION_CMDS might be replaced by a noop,
+        # so initialize VERSION_STATUS to 0
+        VERSION_STATUS=0
+        $VERSION_CMDS > $LOG_DIR/$${PBS_JOBNAME}-version.log 2>&1; VERSION_STATUS=$$?
+
+        if [ VERSION_STATUS -ne 0 ]; then
+            MESSAGE="Command not run, version command returned non-zero value."
+            echo "$$MESSAGE  Aborting pipeline!" >&2
+            send_failure_email $EMAIL_LIST "$$MESSAGE"
+            check_epilogue $LOG_DIR/submitted_shell_scripts/epilogue.sh
+            exit $$VALIDATION_STATUS
+        fi
 
         # command(s) passed into BatchJob:
         $CMD
