@@ -4,11 +4,16 @@ release to release.  It is cumulative, with the most recent changes listed
 first.  The most up-to-date version is in the civet git repository
 
 Version 1.9.1
+-------------
+Bug Fixes
+ - check return value of version command in generated batch script
+
 Features
  - added pipeline <description></description> tag
  - added <option> "type", "description", and "display_name" attributes
  - added "description" attribute for <file>, <filelist>, <dir>, <string> tags
  - added "paired" attribute to <filelist>
+
 
 
 Version 1.9.0
